Adjust css of hello bubble to stop making horizontal scroll on mobile

--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -361,10 +361,10 @@ html, body {
 
 .filledsvg {
   fill:rgb(0, 0, 0);
-  position:absolute;
   z-index: 0;
-  width: 70%;
-  margin-top: -7vh;
+  margin-top: -5%;
+  width: 80%;
+  margin-left: 50%;
 
 }
 
